@@ -1,3 +1,9 @@
+2017-07-21  Yury Gribov  <tetra2005@gmail.com>
+
+	PR middle-end/56727
+	* gcc.dg/pr56727-1.c: New test.
+	* gcc.dg/pr56727-2.c: New test.
+
 2017-07-21  Steven Munroe  <munroesj@gcc.gnu.org>
 
 	* gcc.target/powerpc/mmx-check.h: New file.
