@@ -1,3 +1,9 @@
+2017-07-21  Yury Gribov  <tetra2005@gmail.com>
+
+	PR middle-end/56727
+	* ipa-visibility (function_and_variable_visibility): Convert
+	recursive PLT call to direct call if appropriate.
+
 2017-07-21  Andrew Pinski  <apinski@cavium.com>
 
 	* tree-ssa-sccvn.c (vn_nary_op_eq): Check BIT_INSERT_EXPR's
